# dicer-rs

./: .gitignore  <  Cargo.toml  README.md  TODO.md  dicer-rs.service
parser/: dune-project
parser/_build/: .db  .digest-db  log
parser/_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmo
parser/_build/default/lib/: parser.cmxa
parser/_build/default/lib/.merlin-conf/: lib-parser
parser/_build/default/lib/.parser.objs/byte/: parser.cmi  parser.cmo  parser.cmt
parser/_build/default/lib/.parser.objs/native/: parser.cmx
src/: evaluator.rs  main.rs  parser.rs
